--- a/owner_info_corporation.html
+++ b/owner_info_corporation.html
@@ -260,37 +260,41 @@
                                     </div>
                                   </div>
                                   <div class="row phones">
-                                      <div class="col-xs-12">
-                                          <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
+                                    <div class="col-xs-12">
+                                        <div class="form-group form-group-md col-xs-6 col-sm-3">
                                             <label for="phonenumbertype">Phone Type</label>
                                             <select class="form-control" id="phonenumbertype">
-                                              <option value="Type">Type</option>
-                                              <option value="Cell">Cell</option>
-                                              <option value="Home">Home</option>
-                                              <option value="Work">Work</option>
-                                              <option value="Fax">Fax</option>
+                                            <option value="Type">Type</option>
+                                            <option value="Cell">Cell</option>
+                                            <option value="Home">Home</option>
+                                            <option value="Work">Work</option>
+                                            <option value="Fax">Fax</option>
                                             </select>
-                                          </div>
-                                          <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
+                                        </div>
+                                        <div class="form-group form-group-md col-xs-6 col-sm-4">
                                             <label for="phonenumber">Phone Number</label>
-                                            <input type="text" class="form-control" id="phonenumber" th:field="*{ownerPhone}">
-                                          </div>
-                                          <div class="form-group form-group-md col-xs-12 col-md-2 col-lg-2">
+                                            <input type="text" class="form-control" id="phonenumber">
+                                        </div>
+                                        <div class="form-group form-group-md col-xs-9 col-sm-3">
                                             <label for="extension">Ext.</label>
                                             <input type="text" class="form-control" id="extension">
-                                          </div>
-                                     </div>
-                                  </div>
-                                  <div class="appendphone"></div>
-                                  <div class="inlinebuttons btn-group btn-group-justified" role="group" id="plusphone" aria-label="Add or delete additional phone number">
-                                      <div class="btn-group">
-                                            <button type="button" class="btn-sm btn-success add ctr" id="addphone">Add Additional Phone Number</button>
-                                      </div>
-                                      <div class="btn-group">
-                                            <button type="button" class="btn-sm btn-success add ctr" id="resetphone">&#8211;</button>
-                                      </div>
-                                  </div><!--end buttons-->
-                              </fieldset>
+                                        </div>
+                                        <div class="col-xs-3 col-sm-2 form-group form-group-md visuallyremoved resetphone2">
+                                            <button type="button" class="btn btn-sm close resetphonebtn" value="" aria-label="remove this number"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="appendphones"></div>
+                                <div class="col-xs-12" aria-label="add additional phone number">
+                                    <div class="row">
+                                        <div class="inlinebuttons btn-group btn-group-justified">
+                                            <div class="btn-group col-xs-6">
+                                                <button type="button" class="btn btn-sm btn-success addphoneinitial" id="addphone2" aria-label="add number">Add Number</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                          	</fieldset>
                         </form><!--END Owner Address Information Fieldset-->
                     </div><!--END Content Div-->
                 </div>
