--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -348,8 +348,11 @@
                                                             <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                              	<div class="containsaname col-xs-12">
-                                                                    <div class="row">
-                                                                        <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
+                                                                    <div class="row addname">
+                                                                        <div class="form-group form-group-md col-xs-12 visuallyremoved resetname">
+                                                                            <button type="button" class="btn btn-sm close resetnamebtn" aria-label="remove this name"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                        </div>
+                                                                    	<div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
                                                                         </div>
@@ -363,12 +366,13 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="appendaname"></div>
-                                                                    <div class="col-xs-7 col-md-4" role="group" aria-label="Add or delete additional names">
-                                                                        <div class="col-xs-9">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="addaname">Add Additional</button>
-                                                                        </div>
-                                                                        <div class="col-xs-3">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="resetaname" aria-label="remove a name">&#8211;</button>
+                                                                    <div class="col-xs-12 form-group form-group-md" aria-label="Add additional name">
+                                                                        <div class="row">
+                                                                            <div class="inlinebuttons btn-group btn-group-justified">
+                                                                                <div class="btn-group col-xs-6">
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addaname">Add Additional Name</button>
+                                                                                </div>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                               	</div>
@@ -377,7 +381,10 @@
                                                             <label class="form-check-label form-check" for="portraitchecked" id="checkportrait"><span class="radio notspecial" id="collect">Portrait</span></label>
                                                             <div id="yescontainsportrait" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                               	<div class="containsaportrait col-xs-12">
-                                                                    <div class="row">
+                                                                    <div class="row addportrait">
+                                                                    	<div class="form-group form-group-md col-xs-12 visuallyremoved resetportrait">
+                                                                            <button type="button" class="btn btn-sm close resetportraitbtn" aria-label="remove this portrait"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                        </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -392,12 +399,13 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="appendaportrait"></div>
-                                                                    <div class="col-xs-7 col-md-4" role="group" aria-label="Add or delete additional portraits">
-                                                                        <div class="col-xs-9">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="addaportrait">Add Additional</button>
-                                                                        </div>
-                                                                        <div class="col-xs-3">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="resetaportrait" aria-label="remove a portrait">&#8211;</button>
+                                                                    <div class="col-xs-12 form-group form-group-md" aria-label="Add additional portrait">
+                                                                        <div class="row">
+                                                                            <div class="inlinebuttons btn-group btn-group-justified">
+                                                                                <div class="btn-group col-xs-6">
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addaportrait">Add Additional Portrait</button>
+                                                                                </div>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                               	</div>
@@ -406,7 +414,10 @@
                                                             <label class="form-check-label form-check" for="signaturechecked" id="checksignature"><span class="radio notspecial" id="collectm">Signature</span></label>
                                                             <div id="yescontainssignature" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                              	<div class="containsasignature col-xs-12">
-                                                                    <div class="row">
+                                                                    <div class="row addsignature">
+                                                                    	<div class="form-group form-group-md col-xs-12 visuallyremoved resetsignature">
+                                                                            <button type="button" class="btn btn-sm close resetsignaturebtn" aria-label="remove this signature"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                        </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -421,12 +432,13 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="appendasignature"></div>
-                                                                    <div class="col-xs-7 col-md-4" role="group" aria-label="Add or delete additional signatures">
-                                                                        <div class="col-xs-9">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="addasignature">Add Additional</button>
-                                                                        </div>
-                                                                        <div class="col-xs-3">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="resetasignature" aria-label="remove a portrait">&#8211;</button>
+                                                                    <div class="col-xs-12 form-group form-group-md" aria-label="Add additional signature">
+                                                                        <div class="row">
+                                                                            <div class="inlinebuttons btn-group btn-group-justified">
+                                                                                <div class="btn-group col-xs-6">
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addasignature">Add Additional Signature</button>
+                                                                                </div>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                               	</div>
