--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -222,9 +222,12 @@
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestranslation" aria-labelledby="translate"><!--toggle 'yes' radio-->
-                                                            <div class="row">
-                                                                <div class="col-xs-12 form-group form-group-md holdsatranslate">
-                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
+                                                            <div class="col-xs-12 form-group form-group-md holdsatranslate">
+                                                                <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
+                                                                <div class="row addtranslation">
+                                                                    <div class="form-group form-group-md col-xs-12 visuallyremoved resettranslation">
+                                                                        <button type="button" class="btn btn-sm close resettranslationbtn" aria-label="remove this translation"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                    </div>
                                                                     <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                         <label for="language">Language</label>
                                                                         <select class="form-control" id="language">
@@ -244,17 +247,16 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="appendatranslate"></div>
-                                                                <div class="col-xs-12 btn-group btn-group-justified large" role="group" aria-label="Add or delete additional translation">
+                                                                <div class="col-xs-12 form-group form-group-md" aria-label="Add additional translation">
                                                                     <div class="row">
-                                                                        <div class="col-xs-6 btn-group">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="addtranslate">Add Additional Translation Item</button>
-                                                                        </div>
-                                                                        <div class="col-xs-6 btn-group">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" id="resettranslate">Remove Additional Translation Item</button>
+                                                                        <div class="inlinebuttons btn-group btn-group-justified">
+                                                                            <div class="btn-group col-xs-6">
+                                                                                <button type="button" class="btn btn-sm btn-success addinitial" id="addatranslation">Add Additional Translation</button>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
-                                                                </div>
-                                                           </div> 
+                                                                </div>                                                            	
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </section>
@@ -285,8 +287,11 @@
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
                                                             <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
-                                                                <div class="row">
-                                                                    <div class="containsaname col-xs-12">
+                                                             	<div class="containsaname col-xs-12">
+                                                                    <div class="row addname">
+                                                                    	<div class="form-group form-group-md col-xs-12 visuallyremoved resetname">
+                                                                            <button type="button" class="btn btn-sm close resetnamebtn" aria-label="remove this name"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                        </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -301,13 +306,12 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="appendaname"></div>
-                                                                    <div class="col-xs-12 btn-group btn-group-justified large" role="group" aria-label="Add or delete additional names">
+                                                                    <div class="col-xs-12 form-group form-group-md" aria-label="Add additional name">
                                                                         <div class="row">
-                                                                            <div class="col-xs-6 col-sm-6 btn-group">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" id="addaname">Add Additional Name</button>
-                                                                            </div>
-                                                                            <div class="col-xs-6 col-sm-6 btn-group">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" id="resetaname">Remove Additional Name</button>
+                                                                            <div class="inlinebuttons btn-group btn-group-justified">
+                                                                                <div class="btn-group col-xs-6">
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addaname">Add Additional Name</button>
+                                                                                </div>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -316,8 +320,11 @@
                                                             <input class="form-check-input checkmark" type="checkbox" value="portrait" tabindex="0" id="portraitchecked" aria-labelledby="checkportrait">
                                                             <label class="form-check-label form-check" for="portraitchecked" id="checkportrait"><span class="radio notspecial" id="collect">Portrait</span></label>
                                                             <div id="yescontainsportrait" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
-                                                                <div class="row">
-                                                                    <div class="containsaportrait col-xs-12">
+                                                              	<div class="containsaportrait col-xs-12">
+                                                                    <div class="row addportrait">
+                                                                    	<div class="form-group form-group-md col-xs-12 visuallyremoved resetportrait">
+                                                                            <button type="button" class="btn btn-sm close resetportraitbtn" aria-label="remove this portrait"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                        </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -332,13 +339,12 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="appendaportrait"></div>
-                                                                    <div class="col-xs-12 btn-group btn-group-justified large" role="group" aria-label="Add or delete additional portraits">
+                                                                    <div class="col-xs-12 form-group form-group-md" aria-label="Add additional portrait">
                                                                         <div class="row">
-                                                                            <div class="col-xs-6 col-sm-6 btn-group">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" id="addaportrait">Add Additional Portrait</button>
-                                                                            </div>
-                                                                            <div class="col-xs-6 col-sm-6 btn-group">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" id="resetaportrait">Remove Additional Portrait</button>
+                                                                            <div class="inlinebuttons btn-group btn-group-justified">
+                                                                                <div class="btn-group col-xs-6">
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addaportrait">Add Additional Portrait</button>
+                                                                                </div>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -346,10 +352,12 @@
                                                             </div>
                                                             <input class="form-check-input checkmark" type="checkbox" value="signature" tabindex="0" aria-labelledby="checksignature" id="signaturechecked">
                                                             <label class="form-check-label form-check" for="signaturechecked" id="checksignature"><span class="radio notspecial" id="collectm">Signature</span></label>
-                                                            
                                                             <div id="yescontainssignature" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
-                                                                <div class="row">
-                                                                    <div class="containsasignature col-xs-12">
+                                                              	<div class="containsasignature col-xs-12">
+                                                                    <div class="row addsignature">
+                                                                    	<div class="form-group form-group-md col-xs-12 visuallyremoved resetsignature">
+                                                                            <button type="button" class="btn btn-sm close resetsignaturebtn" aria-label="remove this signature"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                                                                        </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                                                             <label for="firstname">First Name</label>
                                                                             <input type="text" class="form-control" id="firstname">
@@ -364,13 +372,12 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="appendasignature"></div>
-                                                                    <div class="col-xs-12 btn-group btn-group-justified large" role="group" aria-label="Add or delete additional signatures">
+                                                                    <div class="col-xs-12 form-group form-group-md" aria-label="Add additional signature">
                                                                         <div class="row">
-                                                                            <div class="col-xs-6 col-sm-6 btn-group">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" id="addasignature">Add Additional Signature</button>
-                                                                            </div>
-                                                                            <div class="col-xs-6 col-sm-6 btn-group">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" id="resetasignature">Remove Additional Signature</button>
+                                                                            <div class="inlinebuttons btn-group btn-group-justified">
+                                                                                <div class="btn-group col-xs-6">
+                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addasignature">Add Additional Signature</button>
+                                                                                </div>
                                                                             </div>
                                                                         </div>
                                                                     </div>
